recursion.cons.lessons.recursion.cons.Concat.scala.code
def concat(l1:List[Int],  l2:List[Int]): List[Int] = {
  //Solution triviale:
  //return l1:::l2
  
  //Solution voulue:
  
  def butLast(l:List[Int]): List[Int] = {
  if (l==Nil || l.tail==Nil) {
    return Nil
  } else return l.head::butLast(l.tail)
    
    
}
}